```protobuf
syntax = "proto3";

package shipping;
option go_package = "shippingservice/pb";

message ShippingRequest {
    string order_id = 1;
    string user_id = 2;
    string address = 3;
}

message ShippingResponse {
    string shipping_id = 1;
    string order_id = 2;
    string status = 3;  // PENDING, SHIPPED, CANCELLED
    string tracking_number = 4;
    string message = 5;
}

service ShippingService {
    rpc StartShipping(ShippingRequest) returns (ShippingResponse) {}
    rpc CancelShipping(ShippingResponse) returns (ShippingResponse) {}
}
```

# 4. go.mod
```go
module saga-order-system

go 1.21

require (
    google.golang.org/grpc v1.59.0
    google.golang.org/protobuf v1.31.0
    github.com/google/uuid v1.4.0
)
```