```protobuf
syntax = "proto3";

package order;
option go_package = "orderservice/pb";

message Order {
    string id = 1;
    string user_id = 2;
    repeated string items = 3;
    string status = 4;
    double total_price = 5;
}

message CreateOrderRequest {
    string user_id = 1;
    repeated string items = 2;
}

message OrderResponse {
    Order order = 1;
    string message = 2;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
    rpc CancelOrder(Order) returns (OrderResponse) {}
}
```